pulseaudio (0.9.22-1) UNRELEASED; urgency=low

  * New upstream release
  * debian/patches/0002-CVE-2009-1299.patch:
    + Dropped, fixed upstream
  * debian/patches/0003-Re-bootstrap.patch
    + Dropped, not needed anymore

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 05 Dec 2010 10:59:57 +0000

pulseaudio (0.9.21-3) unstable; urgency=low

  * debian/rules: Compile with -g0 on mips{,el} to work around #519006 in
    gcc-4.4

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 03 Jul 2010 15:12:54 +0100

pulseaudio (0.9.21-2) unstable; urgency=low

  * Import NMU patches into pkg-pulse git, thanks to the security team for
    their work!
  * debian/patches/0003-Re-bootstrap.patch
    + Added. Update configure so we don't have to re-run autotools when
    building the package (Closes: #576457, #576546, #576769)
  * Install a KDE specific startup file and module-device-manager.
    Thanks to Daniel Schaal and Zsolt Rizsanyi for patches and tips.
    (Closes: #570487)
  * d/p/0004-In-KDE-only-start-pulseaudio-from-the-KDE-specific-d.patch
    + Added. When running KDE use the KDE specific autostart desktop file
    instead of the generic pulseaudio-x11 file
  *  Fix two typos in debian/pulseaudio.default, patch by Paul Menzel
    (Closes: #566332)
  *  Prepare the debian package for building on HURD again (needs some upstream
     fixes as well). Patch by Pino Toscano (Closes: #573339)
  * Use the pulseaudio.1 manpage from the source tree instead of the older (and
    outdated) debian specific one.

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 27 Jun 2010 20:27:23 +0100

pulseaudio (0.9.21-1.2) unstable; urgency=high

  * Non-maintainer upload by the Security Team.
  * Added autoconf, automake, and libtool in Build-Depends to regenerate
    configure and auto* files at build time, and fixed a regression introduced
    in previous NMU (Closes: #576457)

 -- Giuseppe Iuculano <iuculano@debian.org>  Mon, 05 Apr 2010 23:02:56 +0200

pulseaudio (0.9.21-1.1) unstable; urgency=high
