@@ -5,11 +5,6 @@ include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/utils.mk
 include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 
-ifneq (,$(filter mips mipsel, $(DEB_HOST_ARCH)))
-  CFLAGS = -Wall -g0 $(DEB_OPT_FLAG)
-endif
-
-
 common-build-arch::
 	grep -v -e alsa -e evdev -e udev debian/pulseaudio.install > \
 	    debian/pulseaudio.install.kfreebsd-i386
